--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
+    "react-slick": "^0.28.1",
+    "react-slick-carousel": "^0.14.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
